--- a/check out.css
+++ b/check out.css
@@ -114,6 +114,130 @@ background-color: var(--light);
     height: 80px;
 }
 
+#Form_Value_Con {
+  width: 100%;
+  margin: 2% auto;
+}
+
+#form_value {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#form_con {
+  width: 70%;
+  background-color: var(--gold);
+  border-radius: 10px;
+}
+
+#form_con form {
+  width: 99%;
+  background-color: var(--p2);
+  margin: 5px auto;
+  padding: 3px 0;
+  border-radius: 10px;
+}
+
+#form-billing-heading {
+  font-size: 1.6rem;
+  margin: 1%;
+  font-weight: 600;
+  color: rgba(41, 41, 41, 0.712);
+}
+
+.Address-con,
+.Address-con-sep {
+  width: 100%;
+  display: flex;
+  margin: 1%;
+}
+
+.Address-con label,
+.Address-con-sep label {
+  width: 10%;
+  font-weight: 600;
+  color: rgb(49, 49, 49);
+}
+
+.Address-con input {
+  width: 85%;
+  border: none;
+  color: rgb(49, 49, 49);
+  outline: none;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.Address-con-sep input,
+.Address-con-sep select {
+  width: 35%;
+  border: none;
+  outline: none;
+  padding: 5px;
+  color: rgb(49, 49, 49);
+  border-radius: 5px;
+}
+
+.Address-con-sep #city-name {
+  margin-right: 4%;
+}
+
+.Add-con-1 {
+  width: 50%;
+}
+
+.Address-con-note {
+  display: block;
+  width: 100%;
+}
+
+.Address-con-note label {
+  width: 100%;
+  display: block;
+  margin: 1%;
+  font-weight: 600;
+  color: rgb(49, 49, 49);
+}
+
+.Address-con-note textarea {
+  max-width: 95%;
+  min-width: 95%;
+  margin: 0 1%;
+  border: none;
+  outline: none;
+  color: rgb(49, 49, 49);
+  padding: 5px;
+  border-radius: 5px;
+}
+
+#checkbox_form {
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 2% 1%;
+}
+
+#form-shipping-heading {
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin: 1%;
+  color: rgba(41, 41, 41, 0.712);
+}
+
+
+
+#value_con {
+  width: 25%;
+  background-color: var(--gold);
+}
+
+#payment_method {
+  width: 100%;
+}
+
+
+
+
 #newslater {
     width: 93%;
     padding: 2%;
