--- a/check out.css
+++ b/check out.css
@@ -19,7 +19,7 @@ html {
 
 #all-content {
     min-width: 1356px;
-    max-width: 80vw;
+    max-width: 90vw;
     margin: auto;
   }
 
@@ -115,7 +115,7 @@ background-color: var(--light);
 }
 
 #Form_Value_Con {
-  width: 90vw;
+  width: 90%;
   margin: 2% auto;
 }
 
@@ -259,6 +259,7 @@ background-color: var(--light);
   border-radius: 5px;
   font-size: 1rem;
   font-weight: 600;
+  transition: 0.3s ease;
 }
 
 #Add_com_btn:hover {
@@ -270,6 +271,8 @@ background-color: var(--light);
   border-radius: 10px;
   height: fit-content;
   background-color: var(--gold);
+  position: sticky;
+  top: 99px;
 }
 
 #final_value {
@@ -285,8 +288,161 @@ background-color: var(--light);
   color:rgba(41, 41, 41, 0.712)
 }
 
+.cont_values_sep {
+  display: flex;
+  justify-content: space-between;
+  color: rgb(41, 41, 41);
+  font-size: 1rem;
+  margin: 10px 0;
+}
+
+.payable {
+  font-size: 1.6rem;
+}
+
+#coupon_inp {
+  width: 55%;
+  background-color: white;
+  border: none;
+  outline: none;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#coupon_btn {
+  border: none;
+  outline: none;
+  padding: 10px;
+  border-radius: 5px;
+  width: 35%;
+  background-color: var(--light);
+  transition: 0.3s ease;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+#coupon_btn:hover {
+  background-color: white;
+}
+
+.divider {
+  width: 90%;
+  height: 2px;
+  background-color: rgb(41, 41, 41);
+  margin: 20px auto;
+}
+
 #payment_method {
   width: 100%;
+  margin-top: 30px;
+  background-color: var(--p2);
+  border: 5px var(--gold) solid;
+  border-radius: 10px;
+  display: flex;
+}
+
+#pay_options {
+  width: 30%;
+  border-radius: 6px 0 0 6px;
+  border: 2px solid var(--p1);
+}
+
+.Option_pay {
+  width: 100%;
+  text-align: center;
+  border-bottom: 2px solid var(--p1);
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  font-weight: 600;
+  font-size: 1rem;
+  outline: none;
+  background-color: transparent;
+  padding: 10px;
+}
+
+.Option_pay p {
+  font-size: 0.8rem;
+  font-weight: 100;
+}
+
+.Bottom_btn {
+  border: none;
+}
+
+#options_entery {
+  width: 70%;
+  border-radius: 0 5px 5px 0;
+  border: 2px solid var(--p1);
+  border-left: none;
+}
+
+.collapse_pay {
+  height: 0;
+  width: 0;
+  opacity: 0;
+  z-index: -100;
+}
+
+#card_ent {
+  width: 100%;
+  background-color: #2196F3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#app_list {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.app_con {
+  align-items: center;
+  text-align: center;
+}
+
+#app_list img {
+  width: 60px;
+}
+
+#upi_int label {
+  margin-right: 10px;
+}
+
+#upi_int,
+#submit_btn {
+  width: 80%;
+
+}
+
+#upi_int input {
+  background-color: white;
+  border: none;
+  outline: none;
+  margin-top: 20px;
+  width: 90%;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#submit_btn button {
+  width: 50%;
+  padding: 10px;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  margin-top: 10px;
+  background-color: var(--light);
+  transition: 0.3s ease;
+}
+
+#submit_btn button:hover {
+  background-color: white;
 }
 
 /* Customize the label (the container) */
@@ -362,7 +518,7 @@ background-color: var(--light);
 
 
 #newslater {
-    width: 93%;
+    width: 93.7%;
     padding: 2%;
     height: 150px;
     background-color: var(--gold);
