--- a/check out.css
+++ b/check out.css
@@ -393,6 +393,9 @@ background-color: var(--light);
 .collapse_pay {
   position: absolute;
   z-index: -1;
+  opacity: 0;
+  height: 0;
+  width: 0;
 }
 
 #upi_ent,
@@ -599,7 +602,6 @@ background-color: var(--light);
   width: 100%;
   display: flex;
   height: 80px;
-  background-color: #2196F3;
 }
 
 .image-label {
@@ -643,17 +645,20 @@ background-color: var(--light);
 }
 
 #net_bank_list_con {
-  display: inline;
+  width: 100%;
+  display: flex;
 }
 
 #net_bank_list_con label {
   font-size: 1rem;
   font-weight: 600;
+  width: 30%;
 }
 
 #net_bank_list_con select {
   font-size: 1rem;
-  width: 79.1%;
+  
+  width: 70%;
   padding: 5px;
   border-radius: 5px;
   border: none;
