--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
-* {
-    margin: 0;
-    padding: 0;
+*{
+  margin: 0;
+  padding: 0;
 }
 
 :root {
@@ -12,730 +12,296 @@
     --font: 'Montserrat', sans-serif;
 }
 
+html {
+  font-family: var(--font);
+  scroll-behavior: smooth;
+  background-color: rgb(231, 231, 231);
+}
+
 /*scroll bar start*/
 
 ::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: var(--gold);
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--p1);
-  border-radius: 10px;
+  background: rgb(53, 53, 53);
 }
 
 /*scroll bar end*/
 
-html {
-  font-family: var(--font);
-  scroll-behavior: smooth;
-}
-
 #all-content {
-  max-width: 1356px;
+  max-width: 95vw;
   margin: auto;
 }
 /*Hearder and Navigation bar */
 
 #nav-bar {
-    width: 100%;
-    height: 60px;
-    background-color: var(--gold);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.466);
-    z-index: 1;
+  width: 96%;
+  padding: 0 2%;
+  height: 60px;
+  background-color: var(--p1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  z-index: 10;
 }
 
-.logo {
-    color: var(--dark);
-    margin-left: 30px;
-    transition: 0.3s ease;
-}
-
-#logo {
+#logo,
+#options,
+#ic_options {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 60px;
 }
 
-#options{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+#nav-bar h1,
+#anime i,
+#nav-bar a,
+#logo i{
+  color: var(--dark);
+  text-decoration: none;
+  margin: 0 5px;
+  font-size: 1rem;
+  transition: 0.3s ease;
 }
 
-h1 a, .cart {
-    text-decoration: none;
-    color: var(--dark);
-    margin-right: 25px;
-    transition: 0.3s ease;
-    font-size: 1rem;
+#logo i {
+  font-size: 2.5rem;
 }
 
-h1 a:hover,
-.cart:hover,
-.logo:hover {
-    color: var(--light);
+#logo h1 {
+  font-size: 1.5rem;
 }
 
-.search {
-    height: 30px;
-    border-radius: 30px;
-    border: none;
-    background-color: var(--p1);
-    padding: 0 10px;
-    outline: none;
-    transition: 0.3s ease;
+#options h1:hover,
+#logo:hover i,
+#anime i:hover,
+#logo:hover h1 {
+  color: white;
 }
 
-.search:hover {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
-  background-color: var(--light);
+#ic_options {
+  width: 20%;
+  display: flex;
+  justify-content: right;
 }
-/*spacer*/
+
+.logo {
+  width: 20%;
+  display: flex;
+  align-items: left;
+}
+
+.search_icon_con {
+  width: 15px;
+  padding: 5px;
+  aspect-ratio: 1;
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: none;
+  justify-content: center;
+  border-radius: 0 5px 5px 0;
+  transition: 0.5s ease-out;
+}
+
+#search_icon {
+  position: absolute;
+  transition: 0.5s ease-out;
+  transform: none;
+  z-index: 0;
+}
+
+#cross_icon {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  transform: rotate(-135deg);
+  transition: 0.5s ease-out;
+}
+
+#nav_search_id {
+  height: 15px;
+  opacity: 0;
+  width: 0;
+  border: none;
+  outline: none;
+  padding: 5px;
+  border-radius: 5px 0 0 5px;
+  transition: 0.5s ease-out;
+}
+
+/*Nav Bar Ends Here*/
 
 #spacer {
-    width: 100%;
-    height: 80px;
+  width: 100%;
+  height: 70px;
 }
 
-/*top posters */
+/*Banner Start*/
 
-#banner{
-    width: 95%;
-    height: 500px;
-    border-radius: 15px;
-    background-color: var(--gold);
-    margin: auto;
-    display: flex;
-    align-items: center;
+#banner {
+  height: 500px;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  align-items: center;
 }
 
 #banner-1 {
-    width: 99%;
-    height: 95%;
-    margin: auto;
-    background-image: url("images/hero.jpg");
-    border-radius: 15px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top 40% right 0;
-    color: var(--light);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-/*products lists*/
-#top-selling-con {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    align-items: center;
-    height: auto;
-    margin-top: 50px;
-}
-
-#new-launch-con {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    align-items: center;
-    height: auto;
-    margin-top: 50px;
-}
-
-#top-selling-title {
-  font-size: 1.6rem;
-  background-color: var(--gold);
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: var(--dark);
-}
-
-.arrow{
-  background-color: var(--p2);
-  height: 3rem;
-  width: 3rem;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 15%;
-  margin-top: 10px;
-  transition: 0.3s ease;
-  }
-
-  .arrow:hover {
-    background-color: var(--p1);
-  }
-
-  .product-list {
-    display: flex;
-    justify-content: start;
-    width: 99=8%;
-    align-items: center;
-    background-color: var(--gold);
-    padding: 10px 20px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    transition: 0.3s ease;
-  }
-  
-  .product-list::-webkit-scrollbar {
-    height: 0;
-  }
-
-  .discard {
-    height: 30px;
-    width: 50%;
-    position: absolute;
-    background-color: var(--p1);
-    border-radius: 30px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .dis-card-text {
-    font-size: 1.2rem;
-    color: red;
-  }
-
-  .product {
-    margin: 10px;
-    min-width: 20%;
-    max-width: 30%;
-    text-align: center;
-    background-color: var(--p2);
-    border-radius: 30px 5px;
-    border: 5px solid var(--p2);
-    position: relative;
-    color: var(--dark);
-    top: 0;
-    transition: 0.3s ease;  
-  }
-
-  .product:hover {
-    background-color: var(--p1);
-    border-color: var(--p1);
-    position: relative;
-    top: -10px;
-    cursor: pointer;
-  }
-
-  .product .img-con {
-    width: 100%;
-    border-radius: 30px 5px;
-    height: auto;
-    margin-bottom: 20px;
-    background-color: white;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
-    transition: 0.3s ease;
-  }
-  
-  .product img {    
-    width: 90%;
-    margin: 5%;
-  }
-
-  .Brand_c {
-    width: 90%;
-    font-size: 1rem;
-    font-weight: 600;
-    min-width: 87%;
-    max-width: 97%;
-    display: inline-block;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  
-  .title_c {
-    width: 90%;
-    text-align: left;
-    font-size: 1rem;
-    font-weight: 400;
-    min-width: 87%;
-    max-width: 97%;
-    display: inline-block;
-  }
-
-  .pricing_cart {
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .pricing {
-    width: 60%;
-    margin-top: 10px;
-    font-size: 1rem;
-    align-items: start;
-  }
-
-  .pricing h5 {
-    color: red;
-    text-decoration: line-through;
-  }
-
-  .pricing h1 {
-    font-size: 1.6rem;
-  }
-
-  .pricing2 {
-    position: relative;
-    width: 35%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: transparent;
-    border-radius: 50%;
-    transition: 0.4s ease;
-  }
-
-  .product:hover .pricing2 {
-    background-color: var(--light);
-  }
-
-  .cart2-image {
-    opacity: 1;
-    transition: 0.2s ease;
-  }
-
-  .cart2-image h2 {
-    margin-top: 30px;
-  }
-
-  #star {
-    display: flex;
-    position: relative;
-    justify-content: center;
-  }
-
-  .checked {
-    color: var(--light);
-  }
-
-  .product:hover .checked {
-    color: var(--gold);
-  }
-
-  .star-1 {
-    position: absolute;
-    left: -30px;
-    top: 36px;
-  }
-
-  .star-2 {
-    position: absolute;
-    left: -25px;
-    top: 12px;
-  }
-
-  .star-3 {
-    position: absolute;
-    top: 3px;
-  }
-
-  .star-4 {
-    position: absolute;
-    right: -25px;
-    top: 12px;
-  }
-
-  .star-5 {
-    position: absolute;
-    right: -30px;
-    top: 36px;
-  }
-/*product list*/
-
-/*reach*/
-.feature {
-  width: 100%;
-  height: auto;
-  background-color: var(--p1);
-  margin-top: 50px;
-}
-
-#reach-text {
-  text-align: center;
-  color: var(--dark);
-  padding: 10px;
-  width: 90%;
-  margin: auto;
-}
-
-.decor {
-  width: 250px;
-  height: 3px;
-  background-color: var(--dark);
-  border-radius: 50%;
-  margin: auto;
-}
-
-#reach-text h1 {
-  font-size: 1.6rem;
-  font-weight: 100;
-}
-
-#reach-text p {
-  font-size: 1rem;
-  font-weight: 100;
-}
-
-.map-img {
-  height: 500px;
-  background-image: url(images/REACHMAP.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 0 60px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.map-img h1 {
-  font-size: 1.6rem;
-  font-weight: 100;
-  width: 500px;
-  padding-left: 65px;
-  padding-right: 30px;
-  color: var(--dark);
-}
-
-.map-img h1 span {
-  color: rgb(0, 153, 255);
-}
-/*reach*/
-
-/*feature start*/
-.card {
-  height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.fea-card {
-  width: 200px;
-  background-color: var(--gold);
-  height: 300px;
-  border-radius: 15px;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  justify-content: center;
-  margin: 0 20px;
-  font-size: 1rem;
-  color: var(--light);
-  text-align: center;
-  transition: 0.2s ease;
-}
-
-.fea-card .icon-fea {
-  transform: scale(1.5);
-  transition: 0.2s ease;
-}
-
-.fea-card h1 {
-  margin-top: 30px;
-  font-size: 2rem;
-  transition: 0.2s ease;
-}
-
-.fea-card p {
-  font-size: 1rem;
-  opacity: 0;
-  height: 0%;
-  transition: 0.2s ease;
-}
-
-.fea-card:hover {
-  justify-content: start;
-}
-
-.fea-card:hover .icon-fea {
-  transform: scale(1);
-}
-
-.fea-card:hover h1 {
-  margin-top: 20px;
-  font-size: 1.6rem;
-}
-
-.fea-card:hover p {
-  font-size: 1rem;
-  opacity: 1;
   height: 100%;
-}
-
-#Community {
-  width: 100%;
-  height: max-content;
-  background-color: var(--gold);
-  text-align: center;
-  margin: 3% 0;
-}
-
-#Community h1 {
-  font-size: 1.6rem;
-  padding-top: 20px;
-  color: var(--light);
-}
-
-#community-row {
-  display: flex;
-}
-
-.community-details {
-  aspect-ratio: 1;
-  width: 25%;
-  margin: 20px;
-  background-position: center;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  border: 6px solid var(--p1);
-  border-radius: 10px;
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  transition: 0.3s ease;
-}
-.community-details:hover{
-  background-size: 110%;
-}
-.community-details h3 {
-  font-size: 1rem;
-  color: var(--light);
-  background-color: rgba(0, 0, 0, 0.7);
-}
-.community-details p {
-  color: var(--light);
-  font-size: .8rem;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-.C-details {
-  opacity: 0;
-  transition: 0.3s ease;
-  padding: 5px;
-}
-.community-details:hover .C-details {
-  opacity: 1;
-}
-
-#SEO-Content {
-  width: 96%;
-  padding: 2%;
-  background-color: var(--p1);
-  margin: 3% auto;
-}
-#que-1 {
-  display: flex;
-  width: 90%;
   margin: auto;
-  flex-direction: column;
-  
-}
-
-#que-1 p {
-  margin: 5px 0;
-}
-
-/*feature end*/
-
-/*footer start*/
-
-#newslater {
-  width: 93%;
-  padding: 2%;
-  height: 150px;
-  background-color: var(--gold);
-  margin: auto;
-  background-image: url(images/hero3.png);
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  border: 20px solid var(--gold);
-  color: var(--light);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#heading-news {
-  width: 60%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-#newslater h1 {
-  font-size: 2rem;
-  width: 50%;
-}
-
-form {
-  width: 40%;
-  align-items: center;
-}
-
-#newslater label {
-  width: 100%;
-  display: block;
-}
-
-#newslater input {
-  width: 80%;
-  display: block;
-  margin-bottom: 5px;
-  border: none;
-  outline: none;
+  background-image: url("images/hero.jpg");
   border-radius: 5px;
-  padding: 5px;
-  height: 100%;
-}
-
-#newslater #button {
-  width: 30%;
-  padding: 1%;
-  margin: 1% auto;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-}
-
-#footer-logo {
-  margin-bottom: 30px;
-}
-
-#footer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--dark);
-  background-color: var(--gold);
-  padding: 2%;
-  width: 96%;
-  margin: auto;
-  margin-bottom: 30px;
-  height: 400px;
-}
-
-#footer .col {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top 40% right 0;
+  color: var(--light);
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  margin-bottom: 20px;
+  justify-content: center;
 }
 
-#footer h4 {
-  font-size: 1.6rem;
-  padding-bottom: 20px;
-}
-
-#footer p, a {
-  font-size: 1rem;
-  text-decoration: none;
-  margin-bottom: 10px;
-}
-
-#footer .follow {
-  margin-top: 20px;
-}
-
-#footer .follow i, a,
-#apps {
-  color: var(--dark);
-  padding-right: 4px;
+#banner_button_con {
+  width: 105%;
+  height: 100%;
+  margin: auto;
+  position: relative;
+  left: -2.4%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.5s ease;
   cursor: pointer;
-  transition: 0.3s ease;
 }
 
-#footer .follow i:hover,
-#footer a:hover,
-#apps:hover {
-  color: var(--light);
+.banner-button {
+  width: 50px;
+  aspect-ratio: 1;
+  background-color:rgba(255, 255, 255, 0.473);
+  color: var(--dark);
+  margin: 20px;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: 0.5s ease;
+  z-index: 2;
 }
 
-#footer .copy {
+#banner_button_con:hover {
+  left: 0%;
   width: 100%;
-  text-align: center;
 }
 
-/*footer end*/
-
-/*mobile devices*/
-@media only screen and (max-width: 850px) {
-  #nav-bar {
-    width: 100%;
-    height: 60px;
-    background-color: var(--gold);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.466);
-    z-index: 1;
+#banner_button_con:hover .banner-button {
+  opacity: 1;
 }
 
-.logo {
-    color: var(--dark);
-    margin-left: 30px;
-    transition: 0.3s ease;
+.banner-button:hover {
+  background-color:rgb(255, 255, 255);
+}
+/*Banners End*/
+
+/*Testimonials Star*/
+
+#testimonial_con {
+  width: 100%;
+  height: 350px;
+  margin: 2% 0;
+  display: flex;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
-#logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#testimonial_con::-webkit-scrollbar {
+  height: 0;
 }
 
-#options{
-  display: block;
-  
+.testimonial {
+  background-color: white;
+  height: 340px;
+  min-width: 900px;
+  margin: auto 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-h1 a, .cart {
-    text-decoration: none;
-    color: var(--dark);
-    margin-right: 25px;
-    transition: 0.3s ease;
-    font-size: 1rem;
+.test_person_id {
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-h1 a:hover,
-.cart:hover,
-.logo:hover {
-    color: var(--light);
+.test_img_con {
+  height: 100px;
+  aspect-ratio: 1;
+  background-image: url(images/user.png);
+  background-size: contain;
+  border-radius: 50%;
+  background-repeat: no-repeat;
 }
 
-.search {
-    height: 30px;
-    border-radius: 30px;
-    border: none;
-    background-color: var(--p1);
-    padding: 0 10px;
-    outline: none;
-    transition: 0.3s ease;
+.test_stars_con {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.search:hover {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
-  background-color: var(--light);
+.stars{
+  width: 20px;
+  aspect-ratio: 1;
+  background-color: grey;
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
+
+.golden {
+  background-color: var(--gold);
+}
+
+.test_review_pr_name {
+  width: 100%;
+  height: fit-content;
+}
+
+.test_review_pr_name div {
+  width: 80%;
+  margin: 2% auto;
+}
+
+.test_review_pr_name div h2 {
+  font-size: 1rem;
+  margin-bottom: 5px;
+}
+
+#testimonial_2 h1 {
+  transform: rotate(180deg);
+  font-size: 110px;
+  background-color: aqua;
+}
+
+.end_com_test {
+  clip-path: polygon(50% 0%, 26% 33%, 41% 36%, 49% 57%, 40% 71%, 21% 77%, 7% 69%, 0 53%, 5% 34%, 29% 0);
+  height: 100px;
+  width: 100px;
+  background-color: black;
+}
+
+.para_test {
+  display: flex;
+  position: relative;
+}
+
+span {
+  font-size: 1rem;
+  transform: scale(3);
 }
