--- a/index.css
+++ b/index.css
@@ -13,16 +13,28 @@
     --max-width: 95vw;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 html {
   font-family: var(--font);
   scroll-behavior: smooth;
   background-color: rgb(231, 231, 231);
+  overflow-x: hidden;
 }
 
 #all-content {
   max-width: 95vw;
   overflow: hidden;
   margin: auto;
+}
+
+#all-content section {
+  margin: 12vh 0;
 }
 
 /*scroll bar start*/
@@ -144,14 +156,14 @@ html {
 
 #spacer {
   width: 100%;
-  height: 70px;
+  height: 60px;
 }
 
 /*Banner Start*/
 
 #banner {
-  height: 500px;
-  width: var(--max-width);
+  height: 700px;
+  width: 100vw;
   margin: auto;
   display: flex;
   align-items: center;
@@ -162,7 +174,6 @@ html {
   height: 100%;
   margin: auto;
   background-image: url("images/hero.jpg");
-  border-radius: 5px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top 40% right 0;
@@ -312,7 +323,7 @@ html {
 
 #top-selling-title {
   width: var(--max-width);  
-  height: 50px;
+  height: 40px;
   background-color: white;
   border-radius: 10px;
   display: flex;
@@ -342,6 +353,7 @@ html {
 .product-list {
   width: 100%;
   display: flex;
+  height: 510px;
   overflow-x: scroll;
   overflow-y: hidden;
 }
@@ -355,13 +367,19 @@ html {
   background-color: rgb(245, 245, 245);
   border-radius: 10px;
   padding: 5px;
-  margin: 10px;
+  height: 478px;
   position: relative;
+  box-shadow: none;
+  margin-right: 20px;
+  margin-top: 10px;
+  transform: scale(1);
   transition: 0.3s ease;
 }
 
 .product:hover {
   background-color: white;
+  transform: scale(1.009);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.452);
 }
 
 .product_wish {
@@ -462,4 +480,442 @@ html {
   display: flex;
   height: 20px;
   margin: auto;
+}
+
+/*Feature Reach*/
+
+.feature {
+  width: 99%;
+  aspect-ratio: 3.375;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  border: 5px solid var(--p1);
+  border-radius: 10px;
+  margin: 3% auto;
+}
+
+.feature video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover
+}
+
+.featuretextcon {
+  width: 75%;
+  background-color: rgba(241, 227, 164, 0.603);
+  position: absolute;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2.5%;
+}
+
+.featuretextcon h1 {
+  font-size: 2rem;
+  margin: 10px;
+  text-decoration: underline;
+}
+
+.featuretextcon p {
+  font-weight: 500;
+}
+
+/*Feature Card*/
+.feature-card-con {
+  width: 100%;
+  margin: 2% auto; 
+}
+
+.fea-card-heading {
+  width: 100%;
+  height: 40px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  margin-bottom: 1%;
+}
+
+.feature-card {
+  width: 100%;
+  height: 400px;
+  display: grid;
+  margin: auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.fea-card { 
+  background-color: transparent;
+  min-width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  perspective: 1000px;
+}
+
+.fea-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.fea-card:hover .fea-card-inner {
+  transform: rotateY(180deg);
+}
+
+.fea-card-front, .fea-card-back {
+  position: absolute;
+  width: 100%;
+  border-radius: 10px;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.fea-card-front {
+  background-color: #ffffff;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.i-container {
+  width: 100%;
+  height: 260px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.i-container i {
+  transform: scale(1  );
+}
+
+.fea-card h1 {
+  width: 100%;
+  height: 120px;
+  font-size: 1.5rem;
+}
+
+.fea-card-back {
+  background-color: var(--p1);
+  color: black;
+  transform: rotateY(180deg);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fea-card-back p {
+  font-weight: 600;
+  width: 90%;
+}
+
+/*Community*/
+
+#Community-Heading {
+  width: 100%;
+  height: 40px;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+.community-row {
+  width: 100%;
+  height: fit-content;
+  border-radius: 10px;
+  gap: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.com-card { 
+  background-color: transparent;
+  aspect-ratio: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  perspective: 1000px;
+}
+
+.com-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.com-card:hover .com-card-inner {
+  transform: rotateY(180deg);
+}
+
+.com-card-front, .com-card-back {
+  position: absolute;
+  width: 100%;
+  border-radius: 10px;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.com-card-front {
+  background-image: url(https://i.guim.co.uk/img/media/3f183e3024872dc0280012487854dc5807048166/0_42_3600_2160/master/3600.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=058c94b78fa84d2639fecbef790041f1);
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: black;
+  display: flex;
+  align-items: end;
+  overflow: hidden;
+  justify-content: center;
+}
+
+.com-card-front h1 {
+  width: 100%;
+  background-color: var(--p1);
+}
+
+.com-card-back {
+  background-color: var(--p1);
+  color: black;
+  transform: rotateY(180deg);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.com-card-back p {
+  font-weight: 600;
+  width: 96%;
+}
+
+/*SEO Content Start*/
+
+#SEO-Content {
+  width: 100%;
+  height: 450px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(190deg, #F1E3A4, #F6ECC2, #E9D169, #F1E3A4);
+  border-radius: 10px;
+}
+
+.seo_heading {
+  height: 100%;
+  width: 22%;
+  margin: auto 1%;
+  background-image: url(images/nutrition.png);
+  background-size:contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.seo_head_con {
+  background-color: rgba(255, 255, 255, 0.459);
+  padding: 5%;
+  border-radius: 10px;
+}
+
+.seo_heading h1 {
+  font-size: 8rem;
+  font-weight: 600;
+}
+
+.seo_heading h3 {
+  font-size: 1.7rem;
+}
+
+.seo_div {
+  width: 1%;
+  height: 120%;
+  background-color: rgb(231, 231, 231);
+  transform: rotate(-5deg);
+}
+
+#que-1 {
+  height: fit-content;
+  width: 77%;
+}
+
+#que-1 p {
+  margin: 0.5% 3%;
+}
+
+/*Footer*/
+
+footer {
+  width: 98%;
+  padding: 1%;
+  background-color: var(--p1);
+}
+
+/*newlater*/
+
+#newslater {
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+  color: white;
+  background-image: url(images/bodybg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#heading-news {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#heading-news img {
+  height: 60%;
+  margin-right: 3%;
+}
+
+#heading-news h1 {
+  font-size: 3rem;
+}
+
+.form_con {
+  width: 46%;
+  height: 70%;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.171);
+  transition: 0.3s ease;
+}
+
+#newslater:hover .form_con {
+  background-color: rgba(255, 255, 255, 0.281);
+}
+
+#Footer-form {
+  width: 80%;
+  height: 95%;
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: auto;
+  gap: 0.8%;
+}
+
+#Footer-form label {
+  font-size: 1.2rem;
+}
+
+#Footer-form label[for="email"],
+#Footer-form label[for="contact"] {
+  margin-top: 1%;
+}
+
+#Footer-form input {
+  font-size: 1rem;
+  padding: 0.8%;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+}
+
+#Footer-form input[type="submit"] {
+  width: 60%;
+  margin: 1% auto;
+}
+
+/*Footer*/
+
+#footer {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 5%;
+  margin-top: 2%;
+}
+
+#footer a {
+  text-decoration: none;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+}
+
+#footer-logo-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: black;
+}
+
+.col .footer-logo {
+  width: 100%;
+  padding: 2% 0;
+}
+
+.col #footer-logo-div h1 {
+  font-size: 3rem;
+}
+
+.col h4 {
+  font-size: 1.2rem;
+  margin-bottom: 1%;
+}
+
+.col p,
+.col a{
+  margin-bottom: 0.5%;
+  color: black;
+}
+
+.col a:hover {
+  color: white;
+}
+
+.follow {
+  margin-top: 5%;
+}
+
+footer .copy {
+  margin: auto;
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 0.5%;
 }
