--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@ html {
 }
 
 #ic_options {
-  width: 20%;
+  width: 25%;
   display: flex;
   justify-content: right;
 }
@@ -113,6 +113,7 @@ html {
 
 .search_icon_con {
   width: 15px;
+  
   padding: 5px;
   aspect-ratio: 1;
   position: relative;
@@ -162,7 +163,7 @@ html {
 /*Banner Start*/
 
 #banner {
-  height: 700px;
+  height: 80vh;
   width: 100vw;
   margin: auto;
   display: flex;
@@ -548,7 +549,6 @@ html {
 
 .feature-card {
   width: 100%;
-  height: 400px;
   display: grid;
   margin: auto;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -557,11 +557,11 @@ html {
 
 .fea-card { 
   background-color: transparent;
-  min-width: 300px;
+  width: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 400px;
+  aspect-ratio: 1;
   perspective: 1000px;
 }
 
@@ -605,7 +605,7 @@ html {
 }
 
 .i-container i {
-  transform: scale(1  );
+  transform: scale(1);
 }
 
 .fea-card h1 {
@@ -718,7 +718,7 @@ html {
 
 #SEO-Content {
   width: 100%;
-  height: 450px;
+  height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -748,12 +748,12 @@ html {
 }
 
 .seo_heading h1 {
-  font-size: 8rem;
+  font-size: 6rem;
   font-weight: 600;
 }
 
 .seo_heading h3 {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
 }
 
 .seo_div {
