--- a/cart.css
+++ b/cart.css
@@ -27,16 +27,6 @@ html {
   overflow-x: hidden;
 }
 
-#all-content {
-  max-width: 95vw;
-  overflow: hidden;
-  margin: auto;
-}
-
-#all-content section {
-  margin: 12vh 0;
-}
-
 /*scroll bar start*/
 
 ::-webkit-scrollbar {
@@ -163,9 +153,265 @@ html {
 
 /*cart start*/
 
+#all-content {
+  width: 95vw;
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+  position: relative;
+}
 
+#Notification {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.541);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease;
+}
 
+.not-show {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  z-index: 100;
+}
 
+.not-hide {
+  opacity: 0;
+}
+
+.not-body {
+  padding: 2.5%;
+  height: max-content;
+  width: 45%;
+  background-color: white;
+  border-radius: 10px;
+  position: relative;
+}
+
+#not_close_btn {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  width: 30px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 2px solid rgba(231, 38, 38, 0.575);
+  outline: none;
+  background-color: rgba(233, 76, 76, 0.534);
+}
+
+#not_content {
+  width: 95%;
+  height: 95%;
+  text-align: center;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#form_value {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: start;
+}
+
+#cart_pr_H {
+  margin: 40px 0;
+  width: 60%;
+}
+
+.cart_div {
+  width: 100%;
+  height: max-content;
+  background-color: white;
+  padding: 1%;
+  border-radius: 10px;
+  margin: 20px 0;
+  display: flex;
+}
+
+#cart_all_pr_H {
+  width: 100%;
+  height: max-content;
+  background-color: white;
+  padding: 1%;
+  border-radius: 10px;
+  margin: 20px 0;
+  display: grid;
+  grid-template-rows: 1fr;
+  gap: 20px;
+}
+
+.cart_product {
+  width: 62%;
+  text-align: center;
+}
+
+.cart_ind_pr_H {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(150, 150, 150);
+}
+
+.cart_ind_pr_H img {
+  width: 18%;
+  padding: 1%;
+  min-width: 200px;
+  aspect-ratio: 1;
+  margin-right: 1%;
+}
+
+.pr_text_data_con {
+  width: 40%;
+  height: max-content;
+  margin-right: 1%;
+  height: 100%;
+  position: relative;
+}
+
+.ct_pr_brand {
+  font-weight: 600;
+  color: var(--gold);
+}
+
+.pr_vr_C {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  bottom: 15%;
+}
+
+.pr_pricing_con,
+#pr_price {
+  width: 10%;
+  margin-right: 1%;
+  text-align: center;
+}
+
+#quantityH {
+  width: 9%;
+  height: 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid var(--gold);
+  background-color: var(--p1);
+  border-radius: 10px;
+}
+
+.qtybtn {
+  width: 33%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.btnactive {
+  background-color: var(--p2);
+}
+
+.btninactive {
+  background-color: rgb(102, 91, 54);
+}
+
+#qtymax {
+  border-radius: 0 10px 10px 0;
+}
+
+#qtymin {
+  border-radius: 10px 0 0 10px;
+}
+
+#cart_value_H {
+  margin: 60px 0;
+  width: 25%;
+  height: max-content;
+  padding: 1%;
+  background-color: white;
+  border-radius: 10px;
+  position: sticky;
+  top: 120px;
+}
+
+.divider {
+  width: 80%;
+  border: 1px solid rgb(168, 168, 168);
+  margin: 20px auto;
+}
+
+.ind_vlaue_ct {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+}
+
+#btn_cpn_con {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+}
+
+#place_order {
+  width: 75%;
+  padding: 2%;
+  margin: auto;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  background-color: var(--p1);
+  font-size: 1rem;
+  font-weight: 600;
+  transition: 0.3s ease;
+}
+
+#place_order:hover {
+  background-color: var(--p2);
+}
+
+#cp_con {
+  height: max-content;
+  margin-top: 30px;
+}
+
+#cp_con input {
+  width: 60%;
+  font-size: 0.8rem;
+  padding: 2%;
+  border: 1px solid white;
+  outline: none;
+  background-color: var(--light);
+  border-radius: 10px;
+}
+
+#cp_con button {
+  width: 30%;
+  font-size: 0.8rem;
+  padding: 2%;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  background-color: var(--p1);
+  font-weight: 600;
+  transition: 0.3s ease;
+}
+
+#cp_con button:hover {
+  background-color: var(--p2);
+}
 
 /*Footer*/
 
