--- a/Tic-Tac-Toe/index.css
+++ b/Tic-Tac-Toe/index.css
@@ -1,80 +1,263 @@
-*{
+body {
+    font-family: 'Arial', sans-serif;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
     margin: 0;
-    padding: 0;
+    background-image: linear-gradient(#00D2FF, #3A7BD5);
 }
 
-body {
-    background-color: rgb(20, 20, 20);
-    color: white;
+#game_starter {
+    width: 50vw;
+    height: max-content;
+    background-color: white;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 3%;
+    position: fixed;
 }
 
-.Heading {
-    font-size: 3rem;
-}
-
-section {
-    width: 100%;
-    height: max-content;
-    margin: 50px auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.game_pan_H {
-    width: 450px;
-    aspect-ratio: 1;
-    border: 2px solid rgba(253, 253, 253, 0.411);
-    border-radius: 10px;
-    margin: auto;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 10px;
-    padding: 10px;
-}
-
-.V_H {
-    border-radius: 10px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
-}
-
-.H_H {
-    background-color: rgba(255, 255, 255, 0.411);
-    border-radius: 10px;
-    
-}
-
-.button_con {
-    width: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.player_H h1 {
-    background-color: red;
-    padding: 20px;
-    border-radius: 10px;
+#Heading_start {
     text-align: center;
 }
 
-.player_H {
-    border: 2px solid white;
-    margin: 30px;
-    width: 150px;
+.starter_parts {
+    display: flex;
+    width: 100%;
+    height: max-content;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.player_con {
+    width: 36%;
+    padding: 2%;
+    background-color: #00d0ff77;
     border-radius: 10px;
-    padding: 0px;
-    box-shadow: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.symbol_con {
+    font-size: 2rem;
+    width: 30%;
+    aspect-ratio: 1;
+    background-color: white;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    margin-bottom: 10%;
+    overflow: hidden;
+}
+
+#Player_1_con h1 {
+    color: #F54D62;
+}
+
+#Player_2_con h1 {
+    color: #87E43A;
+}
+
+.input_con {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.input_con input {
+    padding: 4%;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    text-align: center;
+}
+
+#game_starter_btn {
+    width: 30%;
+    margin: auto;
+    padding: 1%;
+    border-radius: 10px;
+    color: black;
+    margin-top: 10%;
+    border: none;
+    outline: none;
+    font-weight: 600;
+    background-color: #00D2FF;
+    transition: 0.3s ease;
+}
+
+#game_starter_btn:hover {
+    background-color: #3A7BD5;
+    color: white;
+}
+
+#game_body{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#heading_timer {
+    text-align: center;
+}
+
+#heading_timer h1 {
+    color: white;
+    font-size: 3rem;
+    margin-bottom: 0;
+}
+
+#game_con {
+    width: 100%;
+    height: max-content;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.G_Player_con {
+    height: max-content;
+    aspect-ratio: 4;
+    padding: 0.5%;
+    border-radius: 10px;
+    border: 2px black solid;
+    display: flex;
+    align-items: center;
+    justify-content: start;
     cursor: pointer;
+    width: 20%;
 }
 
 .active {
-    padding: 10px;
-    box-shadow: 0 0 30px white;
+    border-color: #3A7BD5;
+    background-color: #3A7BD5;
+    color: white;
+}
+
+.G_S_CON {
+    height: 100px;
+    aspect-ratio: 1;
+    border-radius: 8px;
+    display: flex;
+    margin-right: 10px;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background-color: white;
+}
+
+.G_S_CON h1 {
+    font-size: 3rem;
+}
+
+#G_Player_1_con .G_S_CON h1 {
+    color: #F54D62;
+}
+
+#G_Player_2_con .G_S_CON h1 {
+    color: #87E43A;
+}
+
+#player_1_timer {
+    font-size: 1rem;
+}
+
+.g_player_t {
+    text-align: center;
+    margin-left: 10px;
+}
+
+.container {
+    background-color: white;
+    width: max-content;
+    height: max-content;
+    padding: 1%;
+    border-radius: 10px;
+    box-shadow: 0px 10px 13px 7px rgba(0, 0, 0, 0.205);
+}
+
+.board {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    gap: 20px;
+}
+
+.cell {
+    width: 100px;
+    height: 100px;
+    font-size: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    font-weight: 600;
+    cursor: pointer;
+    border: 2px solid #C1C1C1;
+    border-radius: 10px;
+    transition: 0.3s ease;
+}
+
+.cell:hover {
+    background-color: #00d0ff3d;
+}
+
+
+
+#Notification_con {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    transition: 0.3s ease;
+}
+
+#Notification_Emoji {
+    font-size: 5rem;
+}
+
+#notification {
+    width: 70%;
+    height: max-content;
+    padding: 1%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 10px;
+}
+
+#not_okay {
+    width: 30%;
+    border: none;
+    outline: none;
+    padding: 1%;
+    border-radius: 10px;
+    background-color: #3A7BD5;
+    color: white;
+    font-size: 1rem;
+}
+
+@media screen and (max-width: 1050px) {
+    .starter_parts {
+        flex-direction: column;
+    }
+
+    .player_con {
+        margin-bottom: 30px;
+        width: 20%;
+        font-size: 0.1rem;
+    }
 }
